src/components/Hero/Hero.scss
@use "/src/styles/__globals" as *;

.hero {
    position: relative;
    
    max-width: 100vw;
    // max-height: 120vh;
    // height: clamp(20vh, 30vh, 50vh);
    // background-size: cover;
    // background-position: center;
    // background-image: linear-gradient(to bottom, rgba(19,17,36,0) 60%, rgba(19,17,36,0.9) 97%), var(--img);
    

    &__img {
        width: 100%;
        // max-height: 120vh;
        object-fit: cover;
        object-position: top;

        @include desktop {
        
        }
    }

    &__gradient-overlay {
        @include gradient-overlay(180deg);
    }

    &__edit-button {
        z-index: 5;
        position: absolute;
        top: calc(50% - 1.6rem);
        left: calc(50% - 131px);
        padding: 0.75rem 4rem;
        border: none;
        border-radius: 20px;
        text-transform: uppercase;
        letter-spacing: 0.05em;
        background: rgba(0,0,0, 0.6);
        color: $light;
    
        &:hover {
            background: $dark-gradient;
        }
    }
}

.next-event {
    background-color: rgba(0,0,0, 0.6);
    padding: 1.5rem 1rem 1rem;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    text-transform: uppercase;
    text-align: left;

    & > * {
        text-align: left;
        font-weight: 500;
        font-size: 1.4rem;
        letter-spacing: 0.1em;
    }

    &__title  {
        font-weight: 500;
  }

    &__name {
        font-size: 2.7rem;
        font-weight: 600;
    }

    &__details {
        margin: 0;
    }

    @include desktop {
        padding: 2rem 8rem;
    }
}

.home {
    .hero {
        @include desktop {
            max-height: 65vh;
        }
    
        &__img {
            @include desktop {
                max-height: 65vh;
            }
    }
}
}

.change-cover {
    &__instructions {
        margin-bottom: 1rem;
        font-size: 1.2rem;
    }

    &__gallery-container {
        margin: auto;
        max-width: 90%;
        display: flex;
        flex-flow: row wrap;
        justify-content: center;
        gap: 1.1rem;
    }

    &__img-option {
        max-width: 15%;
        border: 2px solid transparent;
        border-radius: 4px;
        opacity: 0.7;

        &--selected {
            border: 2px solid $light;
            opacity: 1;
        }
    }

    &__btn {
        @include button;
        transform: scale(0.7);
        margin-top: 1rem;
    }
}

